--- a/etanodotnet.conf
+++ b/etanodotnet.conf
@@ -1,23 +1,28 @@
-description "node.js server"
-author      "ethan brown"
+description "Upstart script to run a nodejs app as a service"
 
-# used to be: start on startup
-# until we found some mounts weren't ready yet while booting:
-start on started mountall
-stop on shutdown
+env NODE_BIN=/usr/bin/nodejs
+env APP_DIR=/srv/www/etanodotnet
+env SCRIPT_FILE="app.js"   # Entry point for the nodejs app
+env LOG_FILE=/srv/www/etanodotnet/app.log
+env RUN_AS="www-data"        # Upstart can only be run nicely as root, need to drop privileges
+env SERVER_ENV="PRODUCTION"   # Usual apps can be run in different environments (development, test, production ...)
+                            # I typically use the environment variable NODE_ENV (see below) 
+                            # If not needed simply remove the "NODE_ENV=$SERVER_ENV" below
 
-# Automatically Respawn:
+# Start service on startup, stop on shutdown
+start on runlevel [2345]
+stop on runlevel [016]
+
+# Respawn in case of a crash, with default parameters
 respawn
-respawn limit 99 5
 
 script
-  # Not sure why $HOME is needed, but we found that it is:
-  export HOME="/root"
+        # Make sure logfile exists and can be written by the user we drop privileges to
+        touch $LOG_FILE
+        chown $RUN_AS:$RUN_AS $LOG_FILE
+        chdir $APP_DIR
+        chown $RUN_AS:$RUN_AS $SCRIPT_FILE
 
-  exec sudo -u nodejs nodejs /var/local/sites/etanodotnet/app.js >> /var/local/sites/etanodotnet/node.log 2>&1
-end script
 
-post-start script
-  # Optionally put a script here that will notifiy you node has (re)started
-  # /root/bin/hoptoad.sh "node.js has started!"
+        exec sudo -u $RUN_AS $NODE_BIN $SCRIPT_FILE >> $LOG_FILE 2>&1
 end script
