--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,7 @@
 server {
   listen 80;
 
-//  server_name www.ewb.io ewb.io;
-//  return 301 https://$server_name$request_uri;
-//}
-//
-//server {
-//  listen 443 ssl default_server;
-//
-//  server_name ewb.io www.ewb.io;
-//
-//  add_header Strict-Transport-Security "max-age=31536000";
-//  ssl_certificate /etc/letsencrypt/live/ewb.io/fullchain.pem;
-//  ssl_certificate_key /etc/letsencrypt/live/ewb.io/privkey.pem;
-//  ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
-//  ssl_prefer_server_ciphers on;
-//  ssl_session_cache shared:SSL:10m;
-//  ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
-//  ssl_dhparam /etc/ssl/certs/dhparam.pem;
+  server_name www.ewb.io ewb.io;
 
   gzip on;
   gzip_comp_level 6;
@@ -35,10 +19,6 @@ server {
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
   }
-
-//  location /.well-known/acme-challenge {
-//    root /var/www/letsencrypt;
-//  }
 
   location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|pdf|txt|tar|wav|bmp|rtf|js|flv|swf|html|htm|rss)$ {
     root /var/www/ewb.io/source/public;
