--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,6 @@
 server {
   listen 80;
 
-  server_name www.ewb.io ewb.io;
-
   gzip on;
   gzip_comp_level 6;
   gzip_vary on;
@@ -18,6 +16,10 @@ server {
     proxy_set_header Connection 'upgrade';
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
+  }
+
+  location /.well-known/acme-challenge {
+    root /var/www/letsencrypt;
   }
 
   location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|pdf|txt|tar|wav|bmp|rtf|js|flv|swf|html|htm|rss)$ {
