--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,23 @@
 server {
   listen 80;
 
+  server_name www.ewb.io ewb.io;
+  return 301 https://$server_name$request_uri;
+}
+
+server {
+  listen 443 ssl default_server;
+
+  server_name ewb.io www.ewb.io;
+
+  add_header Strict-Transport-Security "max-age=31536000";
+  ssl_certificate /etc/letsencrypt/live/ewb.io/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/ewb.io/privkey.pem;
+  ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+  ssl_prefer_server_ciphers on;
+  ssl_session_cache shared:SSL:10m;
+  ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+
   gzip on;
   gzip_comp_level 6;
   gzip_vary on;
