--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "2.4.6"
-    , "jade": ">= 0.0.1"
-  }
+    "name": "ewb.io",
+    "version": "1.0.0",
+    "private": true,
+    "dependencies": {
+        "express": "^4.15.4",
+        "jade": "^1.11.0"
+    }
 }
