--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "express": "^4.15.4",
-        "jade": "^1.11.0"
+        "jade": "^1.11.0",
+        "timeago.js": "^3.0.2"
     }
 }
