--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
-        "express": "^4.15.4",
-        "jade": "^1.11.0",
-        "timeago.js": "^3.0.2"
+        "express": "^4.15.4"
     }
 }
