--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "express": "^4.15.4",
-        "universal-analytics": "^0.4.15"
+        "morgan": "^1.8.2",
+        "rotating-file-stream": "^1.3.2"
     }
 }
