--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
-        "express": "^4.15.4",
-        "morgan": "^1.8.2",
-        "rotating-file-stream": "^1.3.2"
+        "express": "^4.15.4"
     }
 }
