--- a/nginx.conf
+++ b/nginx.conf
@@ -20,11 +20,11 @@ server {
 
   gzip on;
   gzip_comp_level 6;
-  gzip_vary on;
-  gzip_min_length 20;
   gzip_proxied any;
-  gzip_types text/plain text/html text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip_types text/plain text/html text/css text/xml application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
   gzip_buffers 16 8k;
+  gzip_disable "MSIE [1-6].(?!.*SV1)";
+  gzip_vary on;
 
   location / {
     proxy_pass http://127.0.0.1:1985/;
@@ -39,7 +39,7 @@ server {
     root /var/www/letsencrypt;
   }
 
-  location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|pdf|txt|tar|wav|bmp|rtf|js|flv|swf|html|htm|rss)$ {
+  location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|pdf|txt|tar|wav|bmp|rtf|js|flv|swf|html|htm|rss|eot|woff|woff2|ttf|svg)$ {
     root /var/www/ewb.io/source/public;
     access_log off;
     expires max;
