--- a/nginx.conf
+++ b/nginx.conf
@@ -19,12 +19,35 @@ server {
   ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
   gzip on;
-  gzip_comp_level 6;
-  gzip_proxied any;
-  gzip_types text/plain text/html text/css text/xml application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-  gzip_buffers 16 8k;
-  gzip_disable "MSIE [1-6].(?!.*SV1)";
-  gzip_vary on;
+  gzip_comp_level    5;
+  gzip_min_length    256;
+  gzip_proxied       any;
+  gzip_vary          on;
+  gzip_types
+    application/atom+xml
+    application/javascript
+    application/json
+    application/ld+json
+    application/manifest+json
+    application/rss+xml
+    application/vnd.geo+json
+    application/vnd.ms-fontobject
+    application/x-font-ttf
+    application/x-web-app-manifest+json
+    application/xhtml+xml
+    application/xml
+    font/opentype
+    image/bmp
+    image/svg+xml
+    image/x-icon
+    text/cache-manifest
+    text/css
+    text/plain
+    text/vcard
+    text/vnd.rim.location.xloc
+    text/vtt
+    text/x-component
+    text/x-cross-domain-policy;
 
   location / {
     proxy_pass http://127.0.0.1:1985/;
