change static assets path

--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -63,7 +63,7 @@ server {
   }
 
   location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|pdf|txt|tar|wav|bmp|rtf|js|flv|swf|html|htm|rss|eot|woff|woff2|ttf|svg)$ {
-    root /var/www/ewb.io/source/public;
+    root /var/www/ewb.io/frontend/public;
     access_log off;
     expires max;
   }
