just index.html

--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -50,12 +50,8 @@ server {
     text/x-cross-domain-policy;
 
   location / {
-    proxy_pass http://127.0.0.1:1985/;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
-    proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
+    root /var/www/ewb.io/frontend/public;
+    index index.html;
   }
 
   location /.well-known/acme-challenge {
