add deploy step

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public",
+    "deploy": "ssh ewb.io 'cd /var/www/ewb.io/frontend && git pull && npm install && npm run build && service nginx restart'"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
