--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
-    "deploy": "ssh ewb.io 'cd /var/www/ewb.io/frontend && git pull && npm install && npm run build && service nginx restart'"
+    "deploy": "wrangler publish"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
