--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,14 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploy
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@latest
+      - uses: actions/setup-node@latest
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: npm run build
       - name: deploy
-        uses: cloudflare/wrangler-action@1.3.0
+        uses: cloudflare/wrangler-action@latest
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
