--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
-    "svelte-fa": "^2.1.1"
+    "svelte-fa": "^2.1.1",
+    "wrangler": "0.0.2"
   },
   "dependencies": {
     "p5": "^1.1.9",
