--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,4 +17,4 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: npm run build
-      - run: CF_API_TOKEN=${{ secrets.CF_API_TOKEN }} npm deploy
+      - run: CF_API_TOKEN=${{ secrets.CF_API_TOKEN }} npm run deploy
