--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy": "wrangler publish"
   },
   "devDependencies": {
+    "@cloudflare/wrangler": "^1.11.0",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@rollup/plugin-commonjs": "^14.0.0",
@@ -17,8 +18,7 @@
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
-    "svelte-fa": "^2.1.1",
-    "wrangler": "0.0.2"
+    "svelte-fa": "^2.1.1"
   },
   "dependencies": {
     "p5": "^1.1.9",
