--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
-    "deploy": "wrangler publish"
+    "deploy": "wrangler publish --env production"
   },
   "devDependencies": {
     "@cloudflare/wrangler": "^1.11.0",
