use sapper to get static html files

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ account_id = "864ac90bca0276390f97fdeb78ebc985"
 workers_dev = true
 
 [site]
-bucket = "./public"
+bucket = "__sapper__/export"
 entry-point = "workers-site"
 
 [env.production]
