--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,5 +16,5 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - run: npm install
-      - run: npm run build
+      - run: npm run export
       - run: CF_API_TOKEN=${{ secrets.CF_API_TOKEN }} npm run deploy
