--- a/package.json
+++ b/package.json
@@ -1,27 +1,40 @@
 {
-  "name": "svelte-app",
+  "name": "ewb.io",
   "version": "1.0.0",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public",
+    "dev": "sapper dev",
+    "build": "sapper build --legacy",
+    "export": "sapper export --legacy",
+    "start": "node __sapper__/build",
     "deploy": "wrangler publish --env production"
   },
   "devDependencies": {
     "@cloudflare/wrangler": "^1.11.0",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "svelte-fa": "^2.1.1",
+    "sapper": "^0.28.0",
+    "svelte": "^3.17.3",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-replace": "^2.2.0",
+    "@rollup/plugin-url": "^5.0.0",
     "rollup": "^2.3.4",
-    "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "svelte-fa": "^2.1.1"
+    "rollup-plugin-livereload": "^2.0.0"
   },
   "dependencies": {
     "p5": "^1.1.9",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "compression": "^1.7.1",
+    "polka": "next",
+    "sirv": "^1.0.0"
   }
 }
