--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "@cloudflare/wrangler": "^3.103.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@rollup/plugin-babel": "^5.0.0",
@@ -28,7 +27,8 @@
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
     "svelte": "^3.17.3",
-    "svelte-fa": "^2.1.1"
+    "svelte-fa": "^2.1.1",
+    "wrangler": "^3.103.2"
   },
   "dependencies": {
     "compression": "^1.7.1",
