--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
-    "deploy": "wrangler publish --env production"
+    "deploy": "wrangler publish --env production --compatibility_date 2025-01-21"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
