--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,5 +8,4 @@ bucket = "__sapper__/export"
 entry-point = "workers-site"
 
 [env.production]
-routes = ["*ewb.io/*", "ewb.io/*"]
-zone_id = "58b01e3e4fd07a53251189187fd78d60"
+routes = [{pattern = "*ewb.io/*", zone_id = "58b01e3e4fd07a53251189187fd78d60"}]
